tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_errors_if_turbofish_after_module/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: turbofish (`::<_>`) not allowed on module `moo`
  ┌─ src/main.nr:7:12
  │
7 │         moo::<i32>::foo();
  │            -------
  │

Aborting due to 1 previous error
